PA2/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'

    4 class: CLASS TYPEID '{' feature_list '}'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'
    6      | CLASS error '{' feature_list '}'

    7 feature_list: /* empty */
    8             | feature_list feature ';'

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr

   13 feature_list: feature_list error ';'

   14 formal_list: formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expr: OBJECTID ASSIGN expr
   18     | expr '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr '.' OBJECTID '(' expr_list_comma ')'
   21     | expr '.' OBJECTID '(' ')'
   22     | OBJECTID '(' expr_list_comma ')'
   23     | OBJECTID '(' ')'
   24     | IF expr THEN expr ELSE expr FI
   25     | WHILE expr LOOP expr POOL
   26     | '{' expr_list_semicolon '}'
   27     | '{' error '}'
   28     | LET let_list

   29 let_list: OBJECTID ':' TYPEID IN expr
   30         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   31         | OBJECTID ':' TYPEID ',' let_list
   32         | OBJECTID ':' TYPEID ASSIGN expr ',' let_list
   33         | error ',' let_list

   34 expr: CASE expr OF case_list ESAC

   35 case: OBJECTID ':' TYPEID DARROW expr ';'

   36 case_list: case
   37          | case_list case

   38 expr: NEW TYPEID
   39     | ISVOID expr
   40     | expr '+' expr
   41     | expr '-' expr
   42     | expr '*' expr
   43     | expr '/' expr
   44     | '~' expr
   45     | expr '<' expr
   46     | expr LE expr
   47     | expr '=' expr
   48     | NOT expr
   49     | '(' expr ')'
   50     | OBJECTID
   51     | INT_CONST
   52     | STR_CONST
   53     | BOOL_CONST

   54 expr_list_semicolon: expr ';'
   55                    | expr_list_semicolon expr ';'

   56 expr_list_comma: expr
   57                | expr_list_comma ',' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 10 18 19 20 21 22 23 49
')' (41) 9 10 18 19 20 21 22 23 49
'*' (42) 42
'+' (43) 40
',' (44) 15 31 32 33 57
'-' (45) 41
'.' (46) 18 19 20 21
'/' (47) 43
':' (58) 9 10 11 12 16 29 30 31 32 35
';' (59) 2 3 8 13 35 54 55
'<' (60) 45
'=' (61) 47
'@' (64) 18 19
'{' (123) 4 5 6 9 10 26 27
'}' (125) 4 5 6 9 10 26 27
'~' (126) 44
error (256) 6 13 27 33
CLASS (258) 4 5 6
ELSE (259) 24
FI (260) 24
IF (261) 24
IN (262) 29 30
INHERITS (263) 5
LET (264) 28
LOOP (265) 25
POOL (266) 25
THEN (267) 24
WHILE (268) 25
CASE (269) 34
ESAC (270) 34
OF (271) 34
DARROW (272) 35
NEW (273) 38
ISVOID (274) 39
STR_CONST (275) 52
INT_CONST (276) 51
BOOL_CONST (277) 53
TYPEID (278) 4 5 9 10 11 12 16 18 19 29 30 31 32 35 38
OBJECTID (279) 9 10 11 12 16 17 18 19 20 21 22 23 29 30 31 32 35 50
ASSIGN (280) 12 17 30 32
NOT (281) 48
LE (282) 46
ERROR (283)
LET_PREC (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6, on right: 2 3
feature_list (50)
    on left: 7 8 13, on right: 4 5 6 8 13
feature (51)
    on left: 9 10 11 12, on right: 8
formal_list (52)
    on left: 14 15, on right: 10 15
formal (53)
    on left: 16, on right: 14 15
expr (54)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 34 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 53, on right: 9 10 12 17 18 19 20
    21 24 25 29 30 32 34 35 39 40 41 42 43 44 45 46 47 48 49 54 55
    56 57
let_list (55)
    on left: 29 30 31 32 33, on right: 28 31 32 33
case (56)
    on left: 35, on right: 36 37
case_list (57)
    on left: 36 37, on right: 34 37
expr_list_semicolon (58)
    on left: 54 55, on right: 26 55
expr_list_comma (59)
    on left: 56 57, on right: 18 20 22 57


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'
    6      | CLASS . error '{' feature_list '}'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


state 2

    0 $accept: program . $end

    $end  shift, and go to state 7


state 3

    1 program: class_list .
    3 class_list: class_list . class ';'

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


state 4

    2 class_list: class . ';'

    ';'  shift, and go to state 9


state 5

    6 class: CLASS error . '{' feature_list '}'

    '{'  shift, and go to state 10


state 6

    4 class: CLASS TYPEID . '{' feature_list '}'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 13


state 9

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


state 10

    6 class: CLASS error '{' . feature_list '}'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 14


state 11

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 15


state 12

    4 class: CLASS TYPEID '{' . feature_list '}'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 16


state 13

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


state 14

    6 class: CLASS error '{' feature_list . '}'
    8 feature_list: feature_list . feature ';'
   13             | feature_list . error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


state 15

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 21


state 16

    4 class: CLASS TYPEID '{' feature_list . '}'
    8 feature_list: feature_list . feature ';'
   13             | feature_list . error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 22

    feature  go to state 20


state 17

   13 feature_list: feature_list error . ';'

    ';'  shift, and go to state 23


state 18

    9 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 24
    ':'  shift, and go to state 25


state 19

    6 class: CLASS error '{' feature_list '}' .

    $default  reduce using rule 6 (class)


state 20

    8 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 26


state 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 27


state 22

    4 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 4 (class)


state 23

   13 feature_list: feature_list error ';' .

    $default  reduce using rule 13 (feature_list)


state 24

    9 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28
    ')'       shift, and go to state 29

    formal_list  go to state 30
    formal       go to state 31


state 25

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 32


state 26

    8 feature_list: feature_list feature ';' .

    $default  reduce using rule 8 (feature_list)


state 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    8 feature_list: feature_list . feature ';'
   13             | feature_list . error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 33

    feature  go to state 20


state 28

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


state 29

    9 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 35


state 30

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


state 31

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


state 32

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 38

    $default  reduce using rule 11 (feature)


state 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 5 (class)


state 34

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 39


state 35

    9 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 40


state 36

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 41


state 37

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 42


state 38

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 57


state 39

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


state 40

    9 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 58


state 41

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 59


state 42

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


state 43

   24 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 60


state 44

   28 expr: LET . let_list

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_list  go to state 63


state 45

   25 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 64


state 46

   34 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 65


state 47

   38 expr: NEW . TYPEID

    TYPEID  shift, and go to state 66


state 48

   39 expr: ISVOID . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 67


state 49

   52 expr: STR_CONST .

    $default  reduce using rule 52 (expr)


state 50

   51 expr: INT_CONST .

    $default  reduce using rule 51 (expr)


state 51

   53 expr: BOOL_CONST .

    $default  reduce using rule 53 (expr)


state 52

   17 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' expr_list_comma ')'
   23     | OBJECTID . '(' ')'
   50     | OBJECTID .

    ASSIGN  shift, and go to state 68
    '('     shift, and go to state 69

    $default  reduce using rule 50 (expr)


state 53

   48 expr: NOT . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 70


state 54

   44 expr: '~' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 71


state 55

   26 expr: '{' . expr_list_semicolon '}'
   27     | '{' . error '}'

    error       shift, and go to state 72
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr                 go to state 73
    expr_list_semicolon  go to state 74


state 56

   49 expr: '(' . expr ')'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 75


state 57

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 12 (feature)


state 58

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 85


state 59

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 86


state 60

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | IF expr . THEN expr ELSE expr FI
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    THEN  shift, and go to state 87
    LE    shift, and go to state 76
    '<'   shift, and go to state 77
    '='   shift, and go to state 78
    '+'   shift, and go to state 79
    '-'   shift, and go to state 80
    '*'   shift, and go to state 81
    '/'   shift, and go to state 82
    '@'   shift, and go to state 83
    '.'   shift, and go to state 84


state 61

   33 let_list: error . ',' let_list

    ','  shift, and go to state 88


state 62

   29 let_list: OBJECTID . ':' TYPEID IN expr
   30         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   31         | OBJECTID . ':' TYPEID ',' let_list
   32         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_list

    ':'  shift, and go to state 89


state 63

   28 expr: LET let_list .

    $default  reduce using rule 28 (expr)


state 64

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   25     | WHILE expr . LOOP expr POOL
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    LOOP  shift, and go to state 90
    LE    shift, and go to state 76
    '<'   shift, and go to state 77
    '='   shift, and go to state 78
    '+'   shift, and go to state 79
    '-'   shift, and go to state 80
    '*'   shift, and go to state 81
    '/'   shift, and go to state 82
    '@'   shift, and go to state 83
    '.'   shift, and go to state 84


state 65

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   34     | CASE expr . OF case_list ESAC
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    OF   shift, and go to state 91
    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84


state 66

   38 expr: NEW TYPEID .

    $default  reduce using rule 38 (expr)


state 67

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   39     | ISVOID expr .
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 39 (expr)


state 68

   17 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 92


state 69

   22 expr: OBJECTID '(' . expr_list_comma ')'
   23     | OBJECTID '(' . ')'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56
    ')'         shift, and go to state 93

    expr             go to state 94
    expr_list_comma  go to state 95


state 70

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr
   48     | NOT expr .

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 48 (expr)


state 71

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | '~' expr .
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 44 (expr)


state 72

   27 expr: '{' error . '}'

    '}'  shift, and go to state 96


state 73

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr
   54 expr_list_semicolon: expr . ';'

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84
    ';'  shift, and go to state 97


state 74

   26 expr: '{' expr_list_semicolon . '}'
   55 expr_list_semicolon: expr_list_semicolon . expr ';'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '}'         shift, and go to state 98
    '('         shift, and go to state 56

    expr  go to state 99


state 75

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr
   49     | '(' expr . ')'

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84
    ')'  shift, and go to state 100


state 76

   46 expr: expr LE . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 101


state 77

   45 expr: expr '<' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 102


state 78

   47 expr: expr '=' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 103


state 79

   40 expr: expr '+' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 104


state 80

   41 expr: expr '-' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 105


state 81

   42 expr: expr '*' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 106


state 82

   43 expr: expr '/' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 107


state 83

   18 expr: expr '@' . TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr '@' . TYPEID '.' OBJECTID '(' ')'

    TYPEID  shift, and go to state 108


state 84

   20 expr: expr '.' . OBJECTID '(' expr_list_comma ')'
   21     | expr '.' . OBJECTID '(' ')'

    OBJECTID  shift, and go to state 109


state 85

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' expr . '}'
   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   19     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   21     | expr . '.' OBJECTID '(' ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr
